<resources>
    <string name="app_name">DevelopersBreach</string>

    <!--  App Toolbar Titles  -->
    <string name="favorites_toolbar_title">FAVORITES</string>
    <string name="settings_toolbar_title">Settings</string>
    <string name="web_view_toolbar_title_contact">Contact</string>
    <string name="web_view_toolbar_title_github">GitHub</string>


    <!--  ArticleWebViewFragment Appbar Menu Items  -->
    <string name="bottom_appbar_menu_title_search">Search</string>
    <string name="bottom_appbar_menu_title_close">Close</string>
    <string name="bottom_appbar_menu_title_theme">Theme</string>
    <string name="bottom_appbar_menu_title_refresh">Refresh</string>
    <string name="bottom_appbar_menu_title_find_top">Top</string>
    <string name="bottom_appbar_menu_title_find_bottom">Bottom</string>

    <!--  FavoriteFragment  -->
    <string name="no_favorites_found">No Favorites Found</string>

    <!--  SearchFragment  -->
    <string name="search_articles_hint">Search Articles</string>
    <string name="no_search_results_found">No Results Found</string>
    <string name="search_query_dialog_title">Find The Query</string>
    <string name="enter_query_hint">Enter Query</string>
    <string name="search_query_error_message">Please Enter Query</string>
    <string name="search_query_dialog_positive_button">Find</string>
    <string name="search_query_dialog_negative_button">Cancel</string>

    <!--  DetailFragment  -->
    <string name="open_article_button_text">Open Article</string>

    <!--  App Snackbar Message's  -->
    <string name="snackbar_added_to_favorites_message">Added to Favorites</string>
    <string name="snackbar_removed_favorite_message">Removed From Favorites</string>
    <string name="snackbar_refresh_articles_message">Refresh Completed</string>
    <string name="snackbar_delete_articles_message">Deleted All Articles</string>

    <!--  Show no internet text  -->
    <string name="no_internet_connection">No Internet</string>

    <!--  WebView URL's in WebViewFragment  -->
    <string name="url_site_contact">https://developersbreach.com/contact/</string>
    <string name="url_site_developer">https://github.com/RajashekarRaju</string>

    <!--  SettingsFragment Preferences  -->
    <!--  Category Title  -->
    <string name="preference_category_title_article">Articles</string>
    <string name="preference_category_title_contact">Contact</string>
    <string name="preference_category_title_developer">Developer</string>
    <string name="preference_article_title_about">About</string>
    <!--  Preference Article Summary -->
    <string name="preference_summary_article_refresh">Keeps updated with new data from server.</string>
    <string name="preference_summary_article_delete">This will delete all your favorite articles.</string>
    <string name="preference_summary_article_contact">Submit email on what article i should write next.</string>
    <string name="preference_summary_article_developer">Articles wrote by me here are available as open source, take a look at it.</string>
    <string name="preference_summary_article_about">See what this app is about.</string>
    <!--  Preference Article Title -->
    <!--  Theme List Preference Dialog Title  -->
    <string name="preference_article_title_refresh">Refresh</string>
    <string name="preference_article_title_contact">Open Submit Form</string>
    <string name="preference_article_title_developer">Open Github</string>

    <!--  Dialog Article Titles  -->
    <string name="preference_article_title_delete">Delete Favorites</string>
    <string name="refresh_article_dialog_title">Refresh Favorites ?</string>
    <string name="refresh_article_dialog_message">Choosing Refresh Will Remove All Article Data And
        Updates With New Data. Perform this Only Once A Day.</string>
    <string name="refresh_article_dialog_positive_button">Refresh</string>
    <string name="refresh_article_dialog_negative_button">Cancel</string>
    <string name="no_matches_found_search_results">No matches found.</string>

    <!--  Dialog Delete Article  -->
    <string name="delete_article_dialog_title">Delete Favorites ?</string>
    <string name="delete_article_dialog_message">Choosing Delete Will Remove All Your Favorite Articles.</string>
    <string name="delete_article_dialog_positive_button">Delete</string>
    <string name="delete_article_dialog_negative_button">Cancel</string>

    <!--  Firebase  -->
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_name">Articles Reminder</string>

    <!--    Content Description-->
    <string name="article_image_content_description">Article Image</string>
    <string name="add_favorite_button_content_description">Add Article To Favorites Button</string>
    <string name="delete_favorite_button_content_description">Delete Article From Favorites Button</string>
    <string name="search_button_content_description">Static Article Search Button</string>
    <string name="article_banner_image_content_description">Banner of the article</string>
    <string name="close_banner_fragment_content_description">Button to close banner fragment</string>
    <string name="app_brand_logo_content_description">Logo of the app</string>
    <string name="intro_pager_first_banner_content_description">App branding logo for introduction</string>
    <string name="clear_search_query_content_description">Button to clear search query</string>

    <!--  Text for tools visibility  -->
    <string name="author_name_tools_text">Rajasekhar</string>
    <string name="article_title_tools_text">Article Title</string>
    <string name="article_excerpt_tools_text">This is excerpt of the article. Has a overview of what
        this article about.</string>
    <string name="open_web_view_button_tools_text">Open WebView</string>

    <!--  Key and Values for SharedPreferences used in IntroFragment whether to shown or hide  -->
    <string name="preference_intro_result_key">Find Result Fragment</string>
    <string name="preference_intro_status_key">Intro fragment Status</string>
    <string name="preference_intro_fragment_shown_value">Intro Fragment Shown</string>
    <string name="preference_intro_fragment_not_shown_value">Intro Fragment Not Shown</string>

    <!--  IntroFragment ViewPager Title's  -->
    <string name="intro_pager_first_title_text">DevelopersBreach</string>
    <string name="intro_pager_second_title_text">Dynamic Feed</string>
    <string name="intro_pager_third_title_text">Content Update</string>
    <string name="intro_pager_fourth_title_text">Offline Support</string>

    <!--  IntroFragment ViewPager Subtitle's  -->
    <string name="intro_pager_first_subtitle_text">
        Our motive is to promote use of technology, development to solve challenges.
    </string>
    <string name="intro_pager_second_subtitle_text">
        We are building small scale apps for businesses and to teach students.
    </string>
    <string name="intro_pager_third_subtitle_text">
        We actively contribute to open source which creates impact for learners and developers.
    </string>
    <string name="intro_pager_fourth_subtitle_text">
        This app outlines all content and articles feed we actively creating on our website.
    </string>

    <!--  IntroFragment ViewPager clickable text's  -->
    <string name="search_header_title">Search Articles</string>


    <string name="categories_tag">Categories</string>
    <string name="recent_posts_tag">Recent Posts</string>


    <string name="item_options_favorites">Favorites</string>
    <string name="item_options_search">Search</string>
    <string name="item_options_authors">Authors</string>
    <string name="item_options_settings">Settings</string>
    <string name="item_options_about">About</string>


    <string name="category_title_android">Android</string>
    <string name="category_title_firebase">Firebase</string>
    <string name="category_title_kotlin">Kotlin</string>
    <string name="category_title_machine_learning">Machine Learning</string>
    <string name="category_title_material_design">Material Design</string>
    <string name="category_title_compose">Compose</string>
    <string name="category_title_uncategorized">Uncategorized</string>


    <string name="author_description">
        I’m Rajasekhar working on my startup Developers Breach. I’m a Programmer who loves
        Android development, Creating content, Kotlin enthusiast and Engineering graduate. Learns
        from open source community and always happy to assist someone with my work. I spend most
        of time training and mentoring students who are absolute beginners in android.
    </string>

</resources>
