<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/close_detail_fragment_menu_item"
        android:icon="@drawable/ic_close"
        app:showAsAction="always"
        android:title="@string/bottom_appbar_menu_title_close"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/refresh_page_detail_fragment_menu_item"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="always"
        android:title="@string/bottom_appbar_menu_title_refresh" />

    <item
        android:id="@+id/search_detail_content_menu_item"
        android:icon="@drawable/ic_search"
        app:showAsAction="always"
        android:title="@string/bottom_appbar_menu_title_search" />

    <item
        android:id="@+id/change_theme_detail_fragment_menu_item"
        android:icon="@drawable/ic_theme"
        app:showAsAction="always"
        android:title="@string/bottom_appbar_menu_title_theme" />

</menu>