<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="recyclerView"
            type="androidx.recyclerview.widget.RecyclerView" />

        <variable
            name="viewModel"
            type="com.developerbreach.developerbreach.view.search.SearchViewModel" />

        <variable
            name="searchErrorText"
            type="android.widget.TextView" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <ImageView
            android:id="@+id/search_fragment_up_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:alpha="0.5"
            android:contentDescription="@string/search_button_content_description"
            android:src="@drawable/ic_up_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnBackground" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/article_search_edit_text"
            style="@style/EditText.Article.Search.SearchBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_margin_24dp"
            android:layout_marginTop="4dp"
            android:hint="@string/search_articles_hint"
            app:layout_constraintBottom_toBottomOf="@id/search_fragment_up_button"
            app:layout_constraintStart_toEndOf="@id/search_fragment_up_button"
            app:layout_constraintTop_toTopOf="@id/search_fragment_up_button" />

        <ImageView
            android:id="@+id/clear_search_query_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/layout_margin_12dp"
            android:alpha="0.5"
            android:contentDescription="@string/clear_search_query_content_description"
            android:src="@drawable/ic_search"
            android:visibility="visible"
            app:bindClearSearchQueryData="@{articleSearchEditText}"
            app:bindSearchErrorTextHeader="@{searchErrorText}"
            app:bindSearchRecyclerViewHeader="@{recyclerView}"
            app:bindSearchViewModelHeader="@{viewModel.articles}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="?attr/colorOnBackground"
            tools:visibility="visible" />

        <View
            android:id="@+id/hor_line_search_bar"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.1"
            android:background="?attr/colorOnBackground"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>