<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="navController"
            type="androidx.navigation.NavController" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?attr/background"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.MainTheme"
        tools:context=".view.settings.SettingsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <ImageView
                android:id="@+id/settings_fragment_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:alpha="0.7"
                android:background="?selectableItemBackgroundBorderless"
                android:contentDescription="@string/up_button_content_description"
                android:onClick="@{() -> navController.navigateUp()}"
                android:src="@drawable/ic_up_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="?attr/colorOnBackground" />

            <TextView
                android:id="@+id/settings_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:text="@string/settings_toolbar_title"
                android:textAppearance="?attr/textAppearanceHeadline5"
                android:textColor="?attr/colorOnBackground"
                app:layout_constraintBottom_toBottomOf="@id/settings_fragment_up_button"
                app:layout_constraintStart_toEndOf="@id/settings_fragment_up_button"
                app:layout_constraintTop_toTopOf="@id/settings_fragment_up_button" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/contact_dev_parent_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="?selectableItemBackgroundBorderless"
                android:paddingVertical="16dp"
                app:layout_constraintTop_toBottomOf="@id/settings_tag">

                <ImageView
                    android:id="@+id/contact_dev_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_contact"
                    app:layout_constraintBottom_toBottomOf="@id/contact_dev_text_view_subtitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/contact_dev_text_view_title"
                    app:tint="?attr/colorPrimary"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/contact_dev_text_view_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/preference_category_title_contact"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="?attr/colorPrimary"
                    app:layout_constraintStart_toEndOf="@id/contact_dev_image_view"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/contact_dev_text_view_subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/preference_summary_article_contact"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="?attr/colorOnBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/contact_dev_text_view_title"
                    app:layout_constraintTop_toBottomOf="@id/contact_dev_text_view_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/open_source_parent_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="?selectableItemBackgroundBorderless"
                android:paddingVertical="16dp"
                app:layout_constraintTop_toBottomOf="@id/contact_dev_parent_layout">

                <ImageView
                    android:id="@+id/open_source_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:src="@drawable/ic_developer"
                    app:layout_constraintBottom_toBottomOf="@id/open_source_text_view_subtitle"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/open_source_text_view_title"
                    app:tint="?attr/colorPrimary"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:id="@+id/open_source_text_view_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/preference_category_title_developer"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textColor="?attr/colorPrimary"
                    app:layout_constraintStart_toEndOf="@id/open_source_image_view"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/open_source_text_view_subtitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/preference_summary_article_developer"
                    android:textAppearance="?attr/textAppearanceSubtitle1"
                    android:textColor="?attr/colorOnBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@id/open_source_text_view_title"
                    app:layout_constraintTop_toBottomOf="@id/open_source_text_view_title" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>